--- a/index.html
+++ b/index.html
@@ -3359,10 +3359,28 @@ limitations under the License.
    window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
-
       gtag('config', 'G-V3TNNSX3H4');
+      vars: {
+'ampHost': '${ampdocHost}'
+}
+
 </script>
   </amp-script>
+<!--maybe delete above-->
+  <amp-analytics type="gtag" data-credentials="include">
+    <script type="application/json">
+        {
+        "vars" : { 
+            "gtag_id": "G-V3TNNSX3H4", 
+            "config": { 
+                "G-V3TNNSX3H4": { 
+                      "groups": "default" 
+                      }
+                                      }
+              }
+          } 
+     </script>
+  </amp-analytics>
 
   <amp-auto-ads type="adsense" data-ad-client="ca-pub-3239465181490887">
   </amp-auto-ads>
