--- a/blackdoves.html
+++ b/blackdoves.html
@@ -28,6 +28,8 @@ limitations under the License.
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
+<script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
 
   <style amp-boilerplate="">
