--- a/menu.amp.html
+++ b/menu.amp.html
@@ -26,6 +26,8 @@ limitations under the License.
   <meta name="amp-google-client-id-api" content="googleanalytics" />
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
+<script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
   <style amp-boilerplate="">
     body {
