--- a/stories.amp.html
+++ b/stories.amp.html
@@ -24,6 +24,8 @@ limitations under the License.
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
+<script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
   <style amp-boilerplate="">
     body {
