--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ limitations under the License.
 
   <meta charset="utf-8" />
   <title>MINNOWSPACE</title>
-  <link rel="canonical" href="https://www.minnowspace.com/index.html" />
+  <link rel="canonical" href="https://www.minnowspace.com" />
   <meta name="viewport" content="width=device-width" />
   <meta name="description"
     content="MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
