--- a/plaid.html
+++ b/plaid.html
@@ -114,8 +114,12 @@ limitations under the License.
 
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700%7CLora%7CLato" rel="stylesheet">
 
-  <style amp-custom="">
-    /*! Bassplate | MIT License | https://github.com/basscss/bassplate */
+  <style amp-custom>
+     .img-background {
+      background-image: url(./img/plaid/xmasplaid.webp);
+      background-size: 250%;
+
+        }   /*! Bassplate | MIT License | https://github.com/basscss/bassplate */
 
     /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
     html {
@@ -2336,13 +2340,7 @@ limitations under the License.
       line-height: 1.12
     }
   </style>
-  <style amp-custom>
-    .img-background {
-      background-image: url(./img/plaid/xmasplaid.webp);
-      background-size: 250%;
 
-    }
-  </style>
 </head>
 
 <body class="img-background">
